--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -335,3 +335,39 @@
         font-size: 15px;
     }
 }
+//end advantages
+//start author
+.author{
+    display:flex;
+    justify-content: center;
+    align-items: center;
+    background-position:center;
+    background-repeat:no-repeat;
+    background-size: cover;
+    min-height: 750px;
+    &-box{
+        max-width:650px;
+        min-height:215px;
+        display:flex;
+        justify-content: center;
+        align-items: center;
+        background-color: $green;
+        width:100%;
+    }
+    &__title{
+        font-size:30px;
+        line-height: 30px;
+        color:#fff;
+        @include f700;
+        margin-right: 45px;
+        max-width: 260px;
+    }
+    &__link{
+        font-size:18px;
+        line-height: 36px;
+        padding:14px 40px;
+        background-color: #fff;
+    }
+
+}
+//end author
