--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -52,3 +52,8 @@ body{
     display:inline-block;
     margin-right: 13px;
 }
+.footer-title{
+    @include f700;
+    font-size:22px;
+    color:#fff;
+}
