--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -7,6 +7,10 @@ html{
 *::after{
     box-sizing:inherit;
 }
+html,
+body {
+	height: 100%;
+}
 a{
     display:inline-block;
     text-decoration: none;
@@ -18,12 +22,27 @@ li{
     padding: 0;
     list-style:none;
 }
+
+.wrapper {
+	display: flex;
+	flex-direction: column;
+	min-height: 100%;
+}
+.content {
+	flex: 1 0 auto;
+}
+.footer {
+	flex: 0 0 auto;
+}
 body{
     font-family:'Roboto-Regular' , sans-serif;
     font-size:15px;
     line-height: 24px;
     color: $text;
     font-weight:400;
+}
+.page-content{
+    background-color:$grey;
 }
 .container{
     max-width: 1200px;
@@ -56,4 +75,34 @@ body{
     @include f700;
     font-size:22px;
     color:#fff;
+}
+.breadcrumbs{
+    &__inner{
+        padding: 45px 0px 40px;
+    }
+    &__list{
+        li{
+            display:inline-block;
+            position:relative;
+           
+            & + li{
+                padding-left: 24px;
+                &::before{
+                    content: '-';
+                    position:absolute;
+                    color:$green;
+                    left: 8px;
+                }
+            }
+            &:last-child{
+                a,span{
+                    color:$bg;
+                }
+            }
+        }
+        a{
+            color:#b7c3c8;
+        }
+        }
+       
 }
